# next-app-ethglobal-bk24

./: .gitignore  README.md  package.json  pnpm-lock.yaml
CDP-AgentKit/: .replit  CDP_AgentKit.json  LangChain.py  Pulling_Tweets.py  README.md  agent_calls.py  chatbot.py  chatbot_v1.py  fetch_tweets.py  invoke_contract.py  pyproject.toml  replit_zip_error_log.txt  test_langchain.py  test_tweets.py  wallet_data.txt  wallet_data2.txt  wallet_seed.json  wallet_seed.py
CDP-AgentKit/.cache/nix/: binary-cache-v6.sqlite
CDP-AgentKit/.cache/pip/wheels/4c/2d/9a/6efdadc10a00b64a8dc6aee36ac31d6481f4b569302a074bb2/: ed25519_blake2b-1.4.1-cp312-cp312-linux_x86_64.whl  origin.json
CDP-AgentKit/.cache/pip/wheels/76/08/0b/caa8b1380122cbfe6a03eaccbec0f63c67e619af4e30ca5e2a/: crcmod-1.7-cp312-cp312-linux_x86_64.whl
CDP-AgentKit/.cache/pypoetry/artifacts/02/fc/fb/4a3573e7494fde56858f58b3c8568c36739936a86e068b4fdbd6d302a8/: cdp_agentkit_core-0.0.4-py3-none-any.whl
CDP-AgentKit/.cache/pypoetry/artifacts/11/36/35/1bf3e08a74857b6447d6df4e66c401381dd0165108efb794b081f8fdf4/: regex-2024.9.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
CDP-AgentKit/.cache/pypoetry/artifacts/1a/24/73/a270a49c6a9a1e89673cc702403f533d12a9920e9ed189ea59c40f36b2/: eth_account-0.13.3-py3-none-any.whl
CDP-AgentKit/.cache/replit/env/: latest  latest.json
CDP-AgentKit/.cache/replit/modules/: python-3.12.res
CDP-AgentKit/.cache/replit/nix/: env.json
CDP-AgentKit/.upm/: store.json
Rootstock/: Readme.md
akave-setup/: .gitignore  README.md  package-lock.json  package.json
(+92 files in other folders)
